--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
      <!-- Main highlight section -->
-    <section class="main-highlight-wrapper"></section>
+    <section class="main-highlight-wrapper">
       <div class="container">
         <div
           class="row h-100 align-items-center justify-content-center text-center"
@@ -138,7 +138,24 @@
             </div>
           </div>
         </div>
-
+        <div class="col-12 col-sm-12 col-m-6 col-lg-6 right-side-wrapper">
+          <div class="right-side-inner-wrapper">
+            <div class="top-logo-wrapper">
+              <div class="logo-wrapper">
+                <img src="images/icons/apple-card-logo.png" />
+              </div>
+            </div>
+            <div class="description-wraper">
+              Get 3% Daily Cash on purchases from Apple using Apple Card.
+            </div>
+            <div class="links-wrapper">
+              <ul>
+                <li><a href="">Learn more</a></li>
+                <li><a href="">Buy</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
       </div>
     </section>
