--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link js-scroll-trigger" href="#">iphone1</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#">ipad</a>
+              <a class="nav-link js-scroll-trigger" href="#">ipad-1</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#">watch1</a>
